# chase-uk-pdf-statements-to-csv

./: .copier-answers.yml  .gitignore  CONTRIBUTING.md  README.md  convert_pdf_inputs_to_csv_outputs.py  pyproject.toml  requirements.txt
src/chase_uk_pdf_bank_statements_to_csv/: run_pipeline.py
